@@ -4,6 +4,9 @@ Changelog
 3.0 (unreleased)
 ----------------
 
+- Fixed list_language_files collective.geo.openlayers doesn't use portal_skin anymore
+  [giorgio]
+
 - Fixed tests and doctests for plone5 and external api modifications
   [pbauer]
 
